# haskell-rbac

./: README.md  authority.cabal  hscope.out  rbac.cabal  sandbox.cabal  stack.yaml
app/: Main.hs
config/: models
src/: Action.hs  Api.hs  App.hs  Bokunonumachi.hs  CreateUserRequest.hs  DropUntil.hs  Group.hs  LYGHWriter.hs  Model.hs  Models.hs  Operation.hs  Permission.hs  PermissionAction.hs  Policy.hs  Problem.hs  Rbac.hs  Resource.hs  Role.hs  RolePermission.hs  Sandbox.hs  Subject.hs  SubjectRole.hs  User.hs
test/: RBACSpec.hs  Spec.hs  SqlSpec.hs
