name:                sandbox
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Sandbox
                     , DropUntil
                     , Problem
  build-depends:       base >= 4.7 && < 5
                     , yjtools
                     , matrix
                     , permutation
                     , containers
                     , MissingH
  default-language:    Haskell2010

executable sandbox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , sandbox
                     , lens
  default-language:    Haskell2010

test-suite sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sandbox
                     , hspec
                     , bytestring
                     , file-embed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sandbox
